--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^2.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.2.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.0"
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   }
 }
